# vsm-restaraunt_plus_payment_service

./: .dockerignore  Dockerfile  README.md  alembic.ini  config.env  create_test_data.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 07d206b1853d_remove_relationships.py  09baf8e0c079_add_menu_table.py  1d01a3cf21f7_add_payment_link_to_orders.py  2ebebfb204ef_initial_migration.py  5ad79c711b2f_add_json_data_to_demo.py  5d5c274e3468_add_ingredient_table.py  5e5b4c06f1f3_add_menu_table.py  61d371fd62af_add_demo_model.py  663e84ff556b_fix_models_and_add_payment_webhook.py  76e4dae12029_rename_order_table_to_orders.py  77abdc4ed7b4_add_demo_model.py  7c463d4f6f28_fix_order_models_and_relationships.py  9b755522d5c2_add_conductor_apis.py  a0b49ada78ee_add_orders_table.py  add_sbp_to_paymentmethod_enum.py  aeeb1e582a72_add_orders_table.py  b8d7ba3c28bb_add_orders_tables.py  c2223067c10d_add_passenger_apis_and_cancelled_status.py  c232d649ac37_add_cooking_tasks_table.py  c87b5301848d_add_menu_and_ingridients_models.py  f1cdbcabdb77_initial_migration.py  f2776f1024a9_fix_relationships.py
http/: create_demo.http  recent_demo.http
payment_service/: Dockerfile  main.py
vsm_restaurant/: dependencies.py  settings.py
vsm_restaurant/db/: __init__.py  cooking_task.py  demo.py  menu.py  order.py  orders.py
vsm_restaurant/schemas/: conductor.py  menu.py  orders.py  passenger.py  waiter.py
vsm_restaurant/services/: availability.py  estimation.py  payment_timeout.py
vsm_restaurant/web/: __init__.py  conductor_api.py  cooking_api.py  demo.py  (+17 more)
(+4 files in other folders)
