[project]
name = "vsm-restaurant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]>=0.116.1",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
]
